2005-04-29 Paul Jakma <paul.jakma@sun.com>

	* NEWS: Added some more 0.99 news.
	* configure.ac: bump to 0.99.1 (0.99.0 was never released except
	  via CVS snapshots)

2005-04-25 Paul Jakma <paul.jakma@sun.com>

	* HACKING: Add some notes about build system changes, to
	  document common oversights (common for me anyway).
	  Seperate sections with two newlines, easier to read.

2005-04-16 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* configure.ac: Added AC_ARG_ENABLE(time-check).  By default,
	  warning messages will now be printed for threads or commands that take
	  longer than 5 seconds, but this configure argument can be used
	  to disable the checks or change the threshold.

2005-04-16 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: check for gawk, needed to build memtypes.h

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* configure.ac: Move AC_CANONICAL_* stuff before AM_INIT_AUTOMAKE to
	  eliminate warning message about AC_ARG_PROGRAM being called
	  before AC_CANONICAL_TARGET.

2005-04-11 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Call AC_CANONICAL_{BUILD,TARGET} macros. Target isnt
	  set otherwise, afaict. AC_SUBST enable_{user,group,vty_group} and
	  quagga_statedir - the Solaris package bits for one need this.
	  configure the solaris/ Makefile.
	* Makefile.am: solaris is a subdir - unconditional or else it wont
	  be included in non-solaris made dists.
	  
2005-04-10 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Fix host string recognition for Solaris Nevada aka
	  solaris2.10.1, and hopefully future such strings.

2005-04-07 Paul Jakma <paul.jakma@sun.com>

	* (global): Fix up list loops to match changes in lib/linklist, 
	  and some basic auditing of usage.
	* configure.ac: define QUAGGA_NO_DEPRECATED_INTERFACES
	* HACKING: Add notes about deprecating interfaces and commands.

2005-04-05 Paul Jakma <paul@dishone.st>

	* HACKING: remove the 'manually patch redhat/quagga.spec' bit